# LangMax

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  1.py  2.py  README.md  main.py  pyproject.toml
assets/: run@vastai.sh
assets/prompts/: claude_prompting_guide.md  custom_instructions_coding.md  custom_instructions_cui.md  custom_instructions_misc.md  custom_instructions_visualization.md  generate_caption.md  gtd.v2.md  hack.v1.md  summary.md
assets/prompts/hac/: gtd.md  sum.md
assets/prompts/res/: img_style.md  prompting_guide.md  system_prompt_claude.md  system_prompt_ppl.md
exps/gpt-4o-vs-4o-mini/: README.md  promptfooconfig.yaml
prompts/: custom-instructions-misc.txt  custom_instructions_misc.md  custom_instructions_visualization.md  physic_of_language_models.md  prompting-guide.txt  system-prompt-thinking-protocol.txt
prompts/doc/: empirical-bayes-estimation.txt  jina-ai-llms-ctx.txt  naming-convention-at-cai.txt  the-bitter-lesson.txt  tiger_style.txt  turso-ai-and-embeddings.txt  zed-default-key-bindings.txt
prompts/hac/: unit-tests-generater.txt
prompts/res/: custom-instructions-misc.txt  custom-instructions-visualization.txt
scripts/: run@vastai.sh
scripts/23q4/misc/: 01_bart.py  08_vis.py
scripts/23q4/others/: 002_claude.py  003_t5.py  004_claude.py  005_logprobs.py  006_inference_perplexity.py  007_vis_dataset.py  010_get.hurl  011_linear_regression.py  012_logistic_regression.py  03_t5.py  09_vis.py
scripts/23q4/try-llama-cpp/: dow-model.sh  sta-inference.sh  sta-server.sh
scripts/23q4/try-llm-science/: llm-science-exam-eda.ipynb
scripts/23q4/try-lmql/: zero-shot-classification.lmql
scripts/23q4/try-mlx/: linear_regression.py  sta-inference-mistral.sh
scripts/23q4/try_llama_cpp/: upd.sh
scripts/23q4/try_llm_science/: llm_science_cut_fragment_length.ipynb
scripts/23q4/try_mlx/: sta-inference-llama.sh  sta-inference-lora.sh  sta-train-lora.sh
scripts/24q1/others/: 001_logprobs.py  002_logprobs.py  002_openlogprobs.py  003_claude_3_vision.py  004_ragas_gen_ss_ts.py  03_claude_vision.py  04_ragas.py
scripts/24q1/t-call-api/: call_claude.py  call_gpt.py  call_one_api.py
scripts/24q1/t-chainlit/: chainlit_llava.py
scripts/24q1/try-chatgpt-by-browser/: chatgpt_by_browser.js  chatgpt_by_browser.py
scripts/24q1/try-dify/: dev_dify.yaml  dev_upgrade_dify.sh
scripts/24q1/try-lmql/: translation.lmql
scripts/24q1/try_chainlit/: chainlit_llava.py
scripts/24q2/misc/: 01_bun_shell.js  03_o200k_base.py  04_polars.py  06_callback.py
scripts/24q2/others/: 003_o200k_base_cn.py  005_embb.py  006_callback.py  007_great_tables.py  012_naming.py  02_time_basel.py  12_naming.py
scripts/24q2/t-agents/: con.py
scripts/24q2/t-fsm/: psm.py  stat.py  tran.py
scripts/24q2/t-llm-sdk/: tools.py
scripts/24q2/t-marimo/: marimo_demo.py
scripts/24q2/t-prompts/: ban.py  jin.py
scripts/24q2/t_marimo/: d.py
scripts/24q2/try_wandb/: app.py
scripts/24q3/misc/: 02_logprob_tree_visualizer.py  03_wisper.py  04_alive_progress.py  05_pydantic.py  06_o200k_base.py  07_pbp.py  08_lan.py  09_joblib.py  10_exp.py  11_cal_token_cost.py
scripts/24q3/others/: 001_logprobs.hurl  01_gptz.py  02_logprob_tree_visualizer.py
scripts/24q3/t_32/: main.py
scripts/24q3/to32/: main.py
scripts/24q4/misc/: 001_patito.py  002_clip.py
scripts/baml_src/: clients.baml  generators.baml
scripts/cui/: fire_class.py  marimo_great_tables_base.py
scripts/db_sdk/: lance_emb.py  libsql_turso.py  postgres_emb.py  sqlite_emb.py  sqlite_emb_type.py  sqlite_sdk.py
scripts/decoding/: translation.lmql
scripts/emb-rer/: emb_chromadb.py  rer_ina.py
scripts/ir_sdk/: rerank_docs_jina.py  search_bm25s.py
scripts/llm-agents/: con.py
scripts/llm-decoder/: sql.py
scripts/llm-obse/: helicone.py  logfire_with_litellm.py
scripts/llm-sdk/: call_claude.py  call_gemini.py  call_gemini_context_caching_text.py  call_gemini_context_caching_video.py  call_gpt_response_format.py  call_gpt_tools.py  call_openrouter.py
scripts/llm_sdk/: call_anthropic_prompt_caching.ipynb  call_cerebras.py  call_claude.py  call_deepseek_tools_with_types.py  call_gemini.py  call_gemini_context_caching_text.py  call_gpt_response_format.py  call_lmql.lmql  call_ollama.py  call_openrouter.py  cohere_embed_rerank.py  cohere_rerank.py  ollama_completion.py  templating.py  try_mlx_lm.py  try_openai_function_calling.py  try_openai_pydantic_function_tool_1.py  try_openai_pydantic_function_tool_2.py  try_openai_response_format_2.py  try_openai_response_format_m.py  try_openai_response_format_s.py  try_openai_tools_deprecated.py  try_openai_tools_with_types_deprecated.py
scripts/obs_sdk/: logfire_with_logging.py  logfire_with_pydantic.py  loguru_sdk.py
scripts/observability/: helicone.py  logfire_with_loguru.py
scripts/observability_sdk/: logfire_with_litellm.py
scripts/pro-eng/: logprobs.hurl
scripts/prompt_exp/baml_client/: __init__.py  async_client.py  globals.py  inlinedbaml.py  sync_client.py  tracing.py  type_builder.py
scripts/prompt_exp/baml_src/: clients.baml  generators.baml
scripts/prompt_exp/gpt-4o-vs-4o-mini/: README.md
scripts/rag/: emb_ollama.py  emb_sqlite.py
scripts/sql_sdk/: animals_sqlite.db  animals_sqlmodel.db  sql_sqlite_utils.py  sql_sqlmodel.py  sqlite_sdk.py
scripts/t-llm-agents/: con.py
scripts/t-llm-decoder/: sql.py  zero-shot-cot.lmql
scripts/t-llm-sdk/: call_claude.py  call_openrouter.py
scripts/ui_sdk/marimo_with_chat/: app.py
scripts/vis-fas/: fh_base.py
scripts/vis-int/: 009_fire.py  great_tables_base.py
scripts/vps/: create_instance.sh  search_offers.sh
src/baml_exp/: 1.py  extracter.py
src/baml_src/: classifier.baml  clients.baml  cot.baml  generators.baml  resume.baml
src/braintrust_exp/: eval_tutorial.py  logger_tutorial.py
src/hurl_exp/: logprobs.hurl
src/template_exp/: banks_sdk.py  jinja2_sdk.py
