[project]
    name = "langmax"
    version = "0.1.0"
    description = "Leveraging the capabilities of LLMs to improve day-to-day tasks."
    authors = [
        { name = "Alex", email = "30626291+ipruning@users.noreply.github.com" },
    ]
    readme = "README.md"
    requires-python = ">=3.12, <3.13"
    dependencies = [
        "autoevals>=0.0.96",
        "baml-py>=0.60.0",
        "boto3>=1.35.39",
        "braintrust>=0.0.163",
        "duckdb>=1.1.1",
        "google-generativeai>=0.8.3",
        "instructor>=1.5.2",
        "jinja2>=3.1.4",
        "joblib>=1.4.2",
        "logfire>=1.0.1",
        "marimo>=0.9.9",
        "mlx-lm>=0.19.0",
        "openai>=1.51.2",
        "pandera>=0.20.4",
        "patito>=0.7.0",
        "polars[numpy, openpyxl, pandas, pydantic, pyarrow, sqlalchemy]>=1.9.0",
        "tokencost>=0.1.12",
    ]

[tool.pyright]
    venv             = ".venv"
    venvPath         = "."
    typeCheckingMode = "standard"

    reportMissingImports          = "information"
    reportPossiblyUnboundVariable = "information"
    reportRedeclaration           = "information"

[tool.uv]
    managed          = true
    package          = true
    dev-dependencies = ["httpx[socks]>=0.27.2", "ruff~=0.6.9"]

[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    indent-width = 4
    line-length = 180
    target-version = "py312"

[tool.ruff.lint]
    select    = ["A", "E", "F", "I", "N", "T100"]
    ignore    = []
    fixable   = ["ALL"]
    unfixable = []

    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
    quote-style                = "double"
    indent-style               = "space"
    skip-magic-trailing-comma  = false
    line-ending                = "auto"
    docstring-code-format      = true
    docstring-code-line-length = "dynamic"
