[project]
    name = "langmax"
    version = "0.1.0"
    description = "Leveraging the capabilities of LLMs to improve day-to-day tasks."
    authors = [
        { name = "Alex", email = "30626291+ipruning@users.noreply.github.com" },
    ]
    readme = "README.md"
    requires-python = ">=3.12, <3.13"
    dependencies = [
        "autoevals>=0.0.97",
        "baml-py>=0.61.1",
        "braintrust>=0.0.164",
        "httpx>=0.27.2",
        "instructor[anthropic,google-generativeai]>=1.5.2",
        "jinja2>=3.1.4",
        "joblib>=1.4.2",
        "logfire>=1.1.0",
        "marimo>=0.9.10",
        "mlx-lm>=0.19.1",
        "openai>=1.51.2",
        "polars[numpy, openpyxl, pandas, pydantic, pyarrow, sqlalchemy]>=1.9.0",
        "tokencost>=0.1.12",
    ]

[tool.pyright]
    venv             = ".venv"
    venvPath         = "."
    typeCheckingMode = "standard"

    reportMissingImports          = "information"
    reportPossiblyUnboundVariable = "information"
    reportRedeclaration           = "information"
    reportUnusedExpression        = "information"

[tool.uv]
    dev-dependencies = [
        "grpcio<1.67.0",
        "httpx[socks]>=0.27.2",
        "ruff~=0.6.9",
        "pandera>=0.20.4",
        "patito>=0.7.0",
    ]
    managed = true
    package = true

[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    indent-width = 4
    line-length = 120
    target-version = "py312"

[tool.ruff.lint]
    select    = ["A", "E", "F", "I", "N", "T100"]
    ignore    = ["E501", "N807"]
    fixable   = ["ALL"]
    unfixable = []

    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
    quote-style                = "double"
    indent-style               = "space"
    skip-magic-trailing-comma  = false
    line-ending                = "auto"
    docstring-code-format      = true
    docstring-code-line-length = "dynamic"
